# dotfiles

./: .bash_profile  .bashrc  .dockerignore  .gitconfig  .gitignore  .inputrc  .macos  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .stylua.toml  .tmux.conf  .zshrc  404.html  Brewfile  CLAUDE.md  README.md  TODO.md  Taskfile.yml  aliases.sh  bash-testing-frameworks-guide.md  com.googlecode.iterm2.plist  datapointchris.zsh-theme  exports.local.mbp  exports.sh  functions.sh  index.html  install.sh  iterm2_Default.json  mkdocs.yml  new_computer.md  objects.inv  pyproject.toml  settings.sh  sitemap.xml  symlinks  test-commit-agent-hooks.md  test-hook-quick.md  test-hook.txt  test-phase7.md  (+2 more)
.aws/: config.secret  credentials.secret
.claude/: HOOKS_IMPLEMENTATION_PLAN.md  README.md  hooks.yml  settings.json  skill-rules.json
.claude/agents/: commit-agent.md  test-metrics.md
.claude/commands/: logsift-auto.md  logsift.md
.claude/hooks/: check-bash-error-safety  check-changelog  check-feature-docs  debug-bash-input  enhance-commit-context  (+16 more)
.github/: copilot-instructions.md
.planning/: taskfile-refactor-plan.md
agent-id-test/: index.html
apps/: index.html
architecture/: index.html
archive/: README.md  index.html  sess-bash-original
changelog/: index.html
claude-code/: index.html
cleanup-summary/: index.html
config/: packages.yml
configuration/: index.html
data/: dotfiles-installation-failures-20251205-132848.txt  dotfiles-installation-failures-20251205-132859.txt  full-install-log.txt
development/: index.html
docs/: README.md  admonitions.md  agent-id-test.md  ai.md  changelog.md  corporate.md  diagrams.md  docs-reorganization-summary.md  env-test.md  environment-setup.md  examples.md  final-hook-test.md  hook-debug-test.md  hook-final-test.md  hook-test.md  index.md  lsp.md  nvim-migration.md  publishing.md  reorganization-plan.md  setup.md  staged-file.md  test-commit-agent-2.md  test-commit-agent-3.md  test-commit-agent.md  test-hook-integration.md  test-hooks-config.md  troubleshooting.md
docs-reorganization-summary/: index.html
final-hook-test/: index.html
hook-final-test/: index.html
install/: arch-setup.sh  packages.yml  parse_packages.py  platform-detection.sh  run-installer.sh  wsl-setup.sh
learnings/: index.html
macos/: .bash_profile  .gitconfig  .zshrc  com.googlecode.iterm2.plist
management/: arch-setup.sh  audit-error-safety.sh  detect-alternate-installations.sh  macos-setup.sh  packages.yml  parse-packages.py  parse_packages.py  run-and-summarize.sh  summarize-log.sh  test-install-arch-docker.sh  test-install-current-user-current-platform.sh  test-install-macos-temp-user.sh  test-install-wsl-docker.sh  test-install.sh  test-structured-logging.sh  test-wsl-docker.sh  test-wsl-setup.sh  update.sh  verify-installation.sh  wsl-setup.sh
management/symlinks/: README.md  pyproject.toml  test_edge_cases.py
management/symlinks/symlinks/: __init__.py  cli.py  config.py  manager.py  utils.py
management/symlinks/tests/: test_utils.py
planning/: phase1-complete-summary.md  phase4-complete-summary.md
publishing/: index.html
reference/: index.html
reorganization-plan/: index.html
research/: index.html
scripts/: install-lsp-corporate.sh
search/: search_index.json
shell/: build-shell.sh  functions.sh  macos.sh  setup-windows.sh  sync-windows-shell.sh
stylesheets/: extra.css
symlinks/: cli.py  core.py
taskfiles/: arch.yml  brew.yml  docs.yml  macos.yml  npm.yml  nvm.yml  shell.yml  uv.yml  wsl.yml
tests/: .shellspec  README.md  spec_helper.sh  test-all-apps.sh
tools/: registry.yml
ubuntu/: .gitconfig.linux
wsl/: .bash_profile  .bashrc  .gitconfig  .profile  com.googlecode.iterm2.plist
(+1776 files in other folders)
