[project]
name = "dotfiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markdown>=3.10",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.23",
    "mkdocstrings[python]>=0.30.1",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.16.1",
]
