[project]
name = "dotfiles-symlinks"
version = "1.0.0"
description = "Dotfiles symlink manager with layered architecture"
authors = [{name = "Chris Birch", email = "datapointchris@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
symlinks = "symlinks.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["symlinks"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
